# slambook2_in_Docker

./: Dockerfile  LICENSE  README  README.md  install.sh
cmake-3.17.5/Source/: CMakeVersion.cmake
slambook2/: CMakeLists.txt  LICENSE  README.md  errata.cls  errata.tex
slambook2/ch10/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp
slambook2/ch11/: CMakeLists.txt  feature_training.cpp  gen_vocab_large.cpp  loop_closure.cpp
slambook2/ch12/: CMakeLists.txt
slambook2/ch12/dense_RGBD/: CMakeLists.txt  octomap_mapping.cpp  pointcloud_mapping.cpp  surfel_mapping.cpp
slambook2/ch12/dense_mono/: CMakeLists.txt  dense_mapping.cpp
slambook2/ch13/: CMakeLists.txt
slambook2/ch13/app/: CMakeLists.txt  run_kitti_stereo.cpp
slambook2/ch13/config/: default.yaml
slambook2/ch13/src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  feature.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
slambook2/ch13/test/: CMakeLists.txt  test_triangulation.cpp
slambook2/ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  libHelloSLAM.h  useHello.cpp
slambook2/ch3/: CMakeLists.txt
slambook2/ch3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp  trajectory.txt
slambook2/ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
slambook2/ch4/: CMakeLists.txt  useSophus.cpp
slambook2/ch4/example/: CMakeLists.txt  estimated.txt  groundtruth.txt  trajectoryError.cpp
slambook2/ch5/: CMakeLists.txt
slambook2/ch6/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
slambook2/ch7/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
slambook2/ch8/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
slambook2/ch9/: CMakeLists.txt  SnavelyReprojectionError.h  bundle_adjustment_ceres.cpp  bundle_adjustment_g2o.cpp  common.cpp  common.h  random.h  rotation.h
(+30 files in other folders)
